--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,8 @@ head(dataset.ex)
 ```
 
 ```{r}
-data1 <- EOO.computing(dataset.ex, export_shp = T)
+data1 <- EOO.computing(dataset.ex, export_shp = T,
+             show_progress = FALSE)
 spat <- data1$spatial
 
 ggplot() + geom_sf(data = spat, aes(fill = tax), alpha = 0.3) + theme_bw()
@@ -33,7 +34,8 @@ ggplot() + geom_sf(data = spat, aes(fill = tax), alpha = 0.3) + theme_bw()
 
 ```{r}
 fuente <- read.csv("SP_ConR-2022_28mayo2025.csv", sep = ";")
-data2 <- EOO.computing(fuente, export_shp = T)
+data2 <- EOO.computing(fuente, export_shp = T,
+                       show_progress = FALSE)
 spat2 <- data2$spatial
 
 land <- rnaturalearth::ne_countries(
@@ -55,6 +57,19 @@ g0 <- ggplot() +
 g0
 ```
 
+## Alpha hull
+
+```{r}
+datax <- EOO.computing(fuente, method.range = "alpha.hull", export_shp = TRUE, show_progress = FALSE)
+
+spatx <- datax$spatial
+
+ggplot() + 
+    geom_sf(data = spatx, alpha = 0.4, aes(fill = tax),
+            lty = 1, lwd = 0.5, color = "hotpink")
+```
+
+## Globe
 
 ```{r}
 library(ggplot2)
@@ -68,11 +83,109 @@ g1 <- ggplot() +
   geom_sf(data = land, fill = "transparent") +
   geom_sf(data = spat2, alpha = 0.4, aes(fill = tax), lty = 1, lwd = 0.5, color = "transparent") + 
   coord_sf(crs = crsxd) +
-  scale_fill_manual(values = "darkgreen") +
-  labs(title = "Extent of occurrences", fill = "") +
   theme_minimal() +
-  theme(legend.position = "top",
+  theme(legend.position = "none",
         plot.title = element_text(face = "bold.italic", size = 18, hjust = 0.5))
 
 g1
+```
+
+# Criterion B
+
+```{r}
+criterion_B(fuente[1:3], show_progress = FALSE)
+```
+
+# Number of subpopulations
+
+```{r}
+library(geoidep)
+radio <- subpop.radius(XY = fuente[,1:3],
+   factor.div = 10,
+  quant.max = 0.04,
+  mode = "spheroid",
+  proj_type = "cea")
+sub <- subpop.comp(XY = fuente[,1:3], 
+  resol_sub_pop = radio$radius,
+  show_progress = FALSE, export_shp = TRUE)
+
+pol <- sub$poly_subpop$geometry
+gx <- ggplot()+ 
+  geom_sf(data = land, fill = "transparent") +
+  geom_sf(data = spat2, alpha = 0.4, aes(fill = tax), lty = 1, lwd = 0.5, color = "transparent") +
+  geom_sf(data = pol, 
+  color = "red", lwd = 1) + 
+  geom_point(data = fuente, aes(x = ddlon, y = ddlat), size = 0.02) +
+  theme_bw() +
+  coord_sf(xlim = c(-82, -68),
+    ylim = c(-20, 0)) + theme(legend.position = "top", axis.title = element_blank())
+gx
+```
+
+## Area of occupancy
+
+```{r}
+aoo <- AOO.computing(fuente[,1:3],
+        cell_size_AOO = 2, nbe.rep.rast.AOO = 30,
+        show_progress = FALSE)
+```
+
+The area of occupancy is `r aoo$aoo` $km^2$
+
+```{r}
+citation("ConR")
+```
+
+# Mapping
+
+```{r}
+gn <- gx +
+ annotation_custom(
+   grob = ggplotGrob(g1),
+   xmin = -83,
+   xmax = -75,
+   ymin = -23,
+   ymax = -12
+ )
+
+ggsave(filename = "tilandsia.svg", plot = gn, width = 21, height = 27, units = "cm", dpi = 400)
+```
+
+# Using cowplot
+
+```{r}
+library(cowplot)
+
+gx <- gx +
+ theme(
+   legend.position = "inside",
+   legend.position.inside = c(0.05, 0.05),      # coordenadas dentro del panel [x, y]
+   legend.justification = c(0, 0),              # anclar esquina superior izquierda de la leyenda
+   legend.background = element_rect(fill = "white", color = "black"),
+   legend.box.background = element_blank()
+ )
+
+library(cowplot)
+
+# Composición base
+composicion <- ggdraw() +
+ draw_plot(gx, 0, 0, 0.6, 1) +
+ draw_plot(g1, 0.5, 0.55, 0.5, 0.45)
+
+# Agrega título arriba de todo
+titulo_global <- ggdraw() +
+ draw_label("Tillandsia latifolia", 
+            fontface = 'bold.italic', 
+            x = 0.5, hjust = 0.5, size = 16)
+
+final_con_titulo <- plot_grid(
+ titulo_global,
+ composicion,
+ ncol = 1,
+ rel_heights = c(0.07, 1)
+)
+
+# Mostrar
+final_con_titulo
+
 ```
